# testground

./: BarGraphDashboard.py  CreateBranchInsertLine.py  DropListRevamp.java  Droplist.java  GEMGroupID.py  GemEditorTest.java  GemGroupTree.py  GemIntegrationTest.java  GemLayout.java  GemProviderTest.java  Group projects update.py  ImprovementlayoutJaguar.java  JagGroupTree.py  JtpEditorTest.java  JtpIntegrationTest.java  JtpProviderTest.java  MainOrMasterCreateBranch.py  ModifyExistingFile.py  PlotlyDashboard.py  ProjectDetails.py  PythonFunctions.py  SaveAgConfig.json  SaveAggregatedDashboard.py  SaveEnvButtonDasboard.py  SaveToBlob.py  SearchAllDirectories.py  SystemVarCredentialsEditorTESTED.java  SystemVarCredentialsProviderFINAL.java  SystemVarCredentialsProviderTESTED.java  Tests.yml  TodayAngel.py  TreeInfo_Group.py  TreeInfo_Project.py  TreeNotFound.py  UsernameCredentialsEditorFINAL.java  UsernameCredentialsEditorFinal.java  UsernameCredentialsEditorGEM.java  UsernameCredentialsEditorJTP.java  UsernameCredentialsEditorRevamp.java  UsernameCredentialsEditorRevampTest.java  (+22 more)
Multipage/: AppConfigClass.py  ConfigClass.py  Jre_processor.py  Main.py  README.md  UsinfconfigProcessor.py  app.py  dataRangeStreamlitDash.py  jre_process_noschedule.py  requirements.txt  searchStreamlitTable.py  start_end_date_compare.py
Multipage/Duckdb/: load_parquet.py
Multipage/airflow/: 1airflow_run_manual_save_to_blob.py  airflow_run_manual_save_to_blob.py  daily_jre_manual_save_to_blob.py  jre_processor.py
Multipage/configs/: BlobHelper.py  GemKubectl.txt  Jtpkubctl.txt  apis.json  (+1 more)
(+19 files in other folders)
