[tool.poetry]
name = "jre-versions-dashboard"
version = "0.1.0"
description = "A Streamlit dashboard for tracking Java JRE versions."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
pandas = "^1.2.4"
streamlit = "^0.81.1"
plotly = "^4.14.3"
schedule = "^1.0.0"
python-dotenv = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
